--- a/ProjectEulerProblem_001.ipynb
+++ b/ProjectEulerProblem_001.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "#Project Euler Problem 1\n",
     "def Sum_Multiples_Under(n):\n",
     "    total = 0\n",
     "    for i in range (1,n):\n",
